프로그래머스 다리를 지나는 트럭

--- a/algoStudy/algoStudy/algoStudy.vcxproj.filters
+++ b/algoStudy/algoStudy/algoStudy.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="commitTest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
