프로그래머스_124 나라의 숫자

--- a/algoStudy/algoStudy/algoStudy.vcxproj
+++ b/algoStudy/algoStudy/algoStudy.vcxproj
@@ -119,6 +119,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="commitTest.cpp" />
+    <ClCompile Include="프로그래머스_124 나라의 숫자.cpp" />
     <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
