--- a/algoStudy/algoStudy/algoStudy.vcxproj.filters
+++ b/algoStudy/algoStudy/algoStudy.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="프로그래머스_124 나라의 숫자.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
