--- a/algoStudy/algoStudy/algoStudy.vcxproj
+++ b/algoStudy/algoStudy/algoStudy.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <ClCompile Include="commitTest.cpp" />
     <ClCompile Include="프로그래머스_124 나라의 숫자.cpp" />
+    <ClCompile Include="프로그래머스_기능 개발.cpp" />
     <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp" />
     <ClCompile Include="프로그래머스_숫자 야구.cpp" />
   </ItemGroup>
