--- a/algoStudy/algoStudy/algoStudy.vcxproj
+++ b/algoStudy/algoStudy/algoStudy.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BOJ_1463.cpp" />
     <ClCompile Include="commitTest.cpp" />
     <ClCompile Include="프로그래머스_124 나라의 숫자.cpp" />
     <ClCompile Include="프로그래머스_기능 개발.cpp" />
