--- a/algoStudy/algoStudy/algoStudy.vcxproj.filters
+++ b/algoStudy/algoStudy/algoStudy.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="프로그래머스_기능 개발.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="BOJ_1463.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
